Optionally enable SIMD decection at configure time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,37 @@ endif()
 
 project(astcencoder VERSION 4.7.0)
 
+# Add path for local cmake scripts
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
+
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
+    set(DEFAULT_SSE41 ON)
+    set(DEFAULT_AVX2 ON)
+    set(DEFAULT_NEON ON)
+elseif(ASTC_SIMD_DETECT)
+    find_package(NEON QUIET)
+    set(DEFAULT_NEON OFF)
+    if (NEON_FOUND)
+        set(DEFAULT_NEON ON)
+    else()
+        find_package(AVX2)
+        if (AVX2_FOUND)
+            set(DEFAULT_AVX2 ON)
+        else()
+            find_package(SSE41)
+            if (SSE41_FOUND)
+                set(DEFAULT_SSE41 ON)
+            else()
+                find_package(SSE2 QUIET)
+                if (SSE2_FOUND)
+                    set(DEFAULT_SSE2 ON)
+                endif()
+            endif()
+        endif()
+    endif()
+endif()
+
+
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -34,10 +65,10 @@ set(CMAKE_XCODE_ATTRIBUTE_VALID_ARCHS "x86_64 x86_64h arm64")
 
 include(CTest)
 
-option(ASTCENC_ISA_AVX2 "Enable astcenc builds for AVX2 SIMD")
-option(ASTCENC_ISA_SSE41 "Enable astcenc builds for SSE4.1 SIMD")
-option(ASTCENC_ISA_SSE2 "Enable astcenc builds for SSE2 SIMD")
-option(ASTCENC_ISA_NEON "Enable astcenc builds for NEON SIMD")
+option(ASTCENC_ISA_AVX2 "Enable astcenc builds for AVX2 SIMD" ${DEFAULT_AVX2})
+option(ASTCENC_ISA_SSE41 "Enable astcenc builds for SSE4.1 SIMD" ${DEFAULT_SSE41})
+option(ASTCENC_ISA_SSE2 "Enable astcenc builds for SSE2 SIMD" ${DEFAULT_SSE2})
+option(ASTCENC_ISA_NEON "Enable astcenc builds for NEON SIMD" ${DEFAULT_NEON})
 option(ASTCENC_ISA_NONE "Enable astcenc builds for no SIMD")
 option(ASTCENC_ISA_NATIVE "Enable astcenc builds for native SIMD")
 option(ASTCENC_DECOMPRESSOR "Enable astcenc builds for decompression only")
@@ -47,27 +78,22 @@ option(ASTCENC_ASAN "Enable astcenc builds with address sanitizer")
 option(ASTCENC_UNITTEST "Enable astcenc builds with unit tests")
 option(ASTCENC_INVARIANCE "Enable astcenc floating point invariance" ON)
 option(ASTCENC_CLI "Enable build of astcenc command line tools" ON)
+option(ASTCENC_LEGACY_NAMING "Use old naming scheme for build artifacts (for compatibility)" ON)
 
 # Preflight for some macOS-specific build options
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
-    option(ASTCENC_UNIVERSAL_BUILD "Enable universal multi-arch build" ON)
+    option(ASTCENC_UNIVERSAL_BUILD "Enable universal multi-arch build Mac-only" OFF)
 
-    if(${ASTCENC_UNIVERSAL_BUILD})
-        set(ASTCENC_ISA_SSE41 ON)
-        set(ASTCENC_ISA_AVX2 ON)
-        set(ASTCENC_ISA_NEON ON)
+    if(${ASTCENC_ISA_SSE2})
+        message(FATAL_ERROR "ISA_SSE2 cannot be used in a universal build")
+    endif()
 
-        if(${ASTCENC_ISA_SSE2})
-            message(FATAL_ERROR "ISA_SSE2 cannot be used in a universal build")
-        endif()
+    if(${ASTCENC_ISA_NONE})
+        message(FATAL_ERROR "ISA_NONE cannot be used in a universal build")
+    endif()
 
-        if(${ASTCENC_ISA_NONE})
-            message(FATAL_ERROR "ISA_NONE cannot be used in a universal build")
-        endif()
-
-        if(${ASTCENC_ISA_NATIVE})
-            message(FATAL_ERROR "ISA_NATIVE cannot be used in a universal build")
-        endif()
+    if(${ASTCENC_ISA_NATIVE})
+        message(FATAL_ERROR "ISA_NATIVE cannot be used in a universal build")
     endif()
 else()
     set(ASTCENC_UNIVERSAL_BUILD OFF)
